# programming_assignments

./: CMakeLists.txt  README  a.c  insanity  mod.c  pointer_arithematic  pointer_arithematic-commented.c  pointer_arithematic.c  triforce  triforce.c
algos/data_structures/: linked_list.cpp  linked_list.hxx
algos/sorting/: sort_algos.hxx  sort_tests.cpp
basic_c/basics/: insanity.c
basic_c/execvp/: execvp.c
basic_c/io/: basic.c
basic_c/lseek/: lseek.c
codewars/: golf_kata.py  lib.py  readme
codewars/4kyu/: bit_count.js
codewars/4kyu/js/: bit_count.js
codewars/4kyu/py/: matrix.py  next_biggest.py  permutations.py  roman_numerals.py
codewars/5kyu/: closures.js  memo_fib.py  nani????.py
codewars/5kyu/c/: prod_fib.c
codewars/5kyu/js/: closures.js  memo_fib.js
codewars/5kyu/py/: nani????.py  nani_lambda.py
codewars/6kyu/: bankers_plan  car
codewars/6kyu/c/: 3_5_fizzbuzz.c  bit_counting.c  color_choices.c  consanant_values.c  pokemon.c
codewars/6kyu/py/: 3_5_fizzbuzz.py  ascii_cipher.py  car_savings.py  create_phonenumber.py  ds_prepare_to_die_sl.py  irreduceable_sum_of_fractions.py  lowest_prod4.py  pokemon_kata.py  sum_fracts.py  unary_messages.py  xxo_table.py
data_structures/linked_list/: d_linked_lists.hxx  linked_list.cpp  linked_lists.hxx
euler/: 4.py  euler-5.py  euler-6.py
itp_basics/: area.java  area.php  area.sh
leetcode/: 907_min_subarray_sum.py  priority_q.py  smallest_pairs.py  word_frequency.sh
leetcode/detect_capitals/: solution.js
leetcode/month_challenges/: min_refuels.py
leetcode/util_functions/: listnode_utils.py
leetcode/w1/: add_2_numbers_lsf_ii.py  add_num_lsf_ll.py  intersection_2_ll.py  merge_2_sorted_ll.py  odd_even_ll.py  remove_duplicates_sorted_list_ii.py
leetcode/w2/: 155_min_stack.py  happy_num.py  isomorph.py  jewels_stones.py  k_closest.py  k_pairs_smallest.py  min_subarray_sum.py  top_k_words.py
leetcode/w3/: historgram_bars.py  vertical_bst.py
leetcode/w4/: balanced_bt.py  bt_min_depth.py  bt_prune.py  flatten_tree.py  invert_bt.py  is_symmetric.py  kth_smallest.py  most_frequent_subtree.py  path_sum.py  tree_node.py  valid_bst.py
programming_basics/: checksums.py
programming_basics/areas/: rectangle_area.c  rectangle_area.java  rectangle_area.php  rectangle_area.py
programming_basics/rectangle_area/: area.c  area.js  area.py  area.sh
(+16 files in other folders)
